force-app/main/default/objects/clofor_com_cfs__DepositOffset__c/clofor_com_cfs__DepositOffset__c.object-meta.xml
<CustomObject>
    <label>Dep Offs</label>
    <nameField>
        <displayFormat>DO-{000000}</displayFormat>
        <label>DEPOSIT OFFSET ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dep Offs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>