force-app/main/default/objects/clofor_com_cfs__DepositOffset__c/fields/clofor_com_cfs__AmountDepOffIncludeTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountDepOffIncludeTaxLocal__c</fullName>
    <label>AMOUNT DEP OFF INCLUDE TAX(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>