force-app/main/default/objects/clofor_com_cfs__DepositOffset__c/fields/clofor_com_cfs__DepOffsCreditAccountingCode__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DepOffsCreditAccountingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DEPOSIT OFFSET CREDIT ACCOUNTING CODE</label>
    <referenceTo>clofor_com_cfs__Accounting_Code__c</referenceTo>
    <relationshipLabel>DEP OFFS (CREDIT ACCOUNTING CODE)</relationshipLabel>
    <relationshipName>DepOffsCreditAccountingCode</relationshipName>
    <type>Lookup</type>
</CustomField>