force-app/main/default/objects/clofor_com_cfs__DepositOffset__c/fields/clofor_com_cfs__DepOffsDebitAccountingCode__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DepOffsDebitAccountingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DEPOSIT OFFSET DEBIT ACCOUNTING CODE</label>
    <referenceTo>clofor_com_cfs__Accounting_Code__c</referenceTo>
    <relationshipLabel>DEP OFFS (DEBIT ACCOUNTING CODE)</relationshipLabel>
    <relationshipName>DepOffsDebitAccountingCode</relationshipName>
    <type>Lookup</type>
</CustomField>