force-app/main/default/objects/clofor_com_cfs__DepositOffset__c/fields/clofor_com_cfs__DepositOffsetAmountUSD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DepositOffsetAmountUSD__c</fullName>
    <label>DEPOSIT OFFSET AMOUNT(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>