force-app/main/default/objects/clofor_com_cfs__DepositOffset__c/fields/clofor_com_cfs__DepositOffsetName__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DepositOffsetName__c</fullName>
    <label>DEPOSIT OFFSET NAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>