force-app/main/default/objects/clofor_com_cfs__DepositOffset__c/fields/clofor_com_cfs__OpeningBalance__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__OpeningBalance__c</fullName>
    <label>OPENING BALANCE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>