force-app/main/default/objects/clofor_com_cfs__DepositOffset__c/fields/clofor_com_cfs__PreviousDepositOffsetID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PreviousDepositOffsetID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PREVIOUS DEPOSIT OFFSET ID</label>
    <referenceTo>clofor_com_cfs__DepositOffset__c</referenceTo>
    <relationshipLabel>NEXT DEPOSIT OFFSET</relationshipLabel>
    <relationshipName>PreviousDepositOffsetID</relationshipName>
    <type>Lookup</type>
</CustomField>