force-app/main/default/objects/clofor_com_cfs__DepositOffset__c/fields/clofor_com_cfs__RollupFMSUnpaidBalOfBuyingLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RollupFMSUnpaidBalOfBuyingLocal__c</fullName>
    <label>ROLLUP FMS UNPAID BAL OF BUY(LOCAL)</label>
    <summarizedField>clofor_com_cfs__ConnectDepositOffsetInvoicing__c.clofor_com_cfs__FMSUnpaidBalOfBuyingLocal__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__ConnectDepositOffsetInvoicing__c.clofor_com_cfs__DepositOffsetID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>