force-app/main/default/objects/clofor_com_cfs__DepositOffset__c/fields/clofor_com_cfs__RollupFMSUnreceivedBalOfSellLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RollupFMSUnreceivedBalOfSellLocal__c</fullName>
    <label>ROLLUP FMS UNRECEIVED BAL OF SELL(LOCAL)</label>
    <summarizedField>clofor_com_cfs__ConnectDepositOffsetInvoicing__c.clofor_com_cfs__FMSUnreceivedBalOfSellingLocal__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__ConnectDepositOffsetInvoicing__c.clofor_com_cfs__DepositOffsetID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>