force-app/main/default/objects/clofor_com_cfs__DepositOffset__c/fields/clofor_com_cfs__RollupFMSUnreceivedBalOfSellUSD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RollupFMSUnreceivedBalOfSellUSD__c</fullName>
    <label>ROLLUP FMS UNRECEIVED BAL OF SELL(USD)</label>
    <summarizedField>clofor_com_cfs__ConnectDepositOffsetInvoicing__c.clofor_com_cfs__FMSUnreceivedBalOfSellingUSD__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__ConnectDepositOffsetInvoicing__c.clofor_com_cfs__DepositOffsetID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>