force-app/main/default/objects/clofor_com_cfs__DepositOffset__c/fields/clofor_com_cfs__RollupWMSUnreceivedBalOfSelLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RollupWMSUnreceivedBalOfSelLocal__c</fullName>
    <label>ROLLUP WMS UNRECEIVED BAL OF SELL(LOCAL)</label>
    <summarizedField>clofor_com_cfs__ConnectDepositOffsetBilling__c.clofor_com_cfs__WMSUnreceivedBalOfSellingLocal__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__ConnectDepositOffsetBilling__c.clofor_com_cfs__DepositOffsetID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>