force-app/main/default/objects/clofor_com_cfs__DepositOffset__c/recordTypes/clofor_com_cfs__OffsetDepositFromCustomer.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__OffsetDepositFromCustomer</fullName>
    <active>true</active>
    <label>Offset Deposit From Customer</label>
</RecordType>