force-app/main/default/objects/clofor_com_cfs__DepositOffset__c/recordTypes/clofor_com_cfs__OffsetDepositFromCustomerUSD.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__OffsetDepositFromCustomerUSD</fullName>
    <active>true</active>
    <label>Offset Deposit From Customer-USD Currency</label>
</RecordType>