force-app/main/default/objects/clofor_com_cfs__DepositOffset__c/recordTypes/clofor_com_cfs__OffsetForDepositTo3rdPartyUSD.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__OffsetForDepositTo3rdPartyUSD</fullName>
    <active>true</active>
    <label>Offset For Deposit To 3rd Party-USD Currency</label>
</RecordType>