force-app/main/default/objects/clofor_com_cfs__DepositOffset__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__DepositOffsetName__c</columns>
    <columns>clofor_com_cfs__DepositID__c</columns>
    <columns>clofor_com_cfs__PreviousDepositOffsetID__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>clofor_com_cfs__DepositOffsetAmount__c</columns>
    <columns>clofor_com_cfs__OffsetDate__c</columns>
    <columns>clofor_com_cfs__AccountedDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>